--- a/react-vite/package.json
+++ b/react-vite/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
     "framer-motion": "^12.19.0",
+    "lucide-react": "^0.523.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-redux": "^9.2.0",
-    "wavesurfer.js": "^7.9.5"
+    "socket.io-client": "^4.8.1",
+    "wavesurfer.js": "^7.9.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
